[package]
name = "crypt0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
async-tungstenite = { version = "0.16", features = ["tokio-openssl"] }
futures = "0.3"
serde_json = "1.0"
strum = "0.23"
strum_macros = "0.23"
tokio = { version = "1.1", features = ["full"] }
tokio-openssl = "0.6"

[dev-dependencies]